--- a/less/about.less
+++ b/less/about.less
@@ -81,9 +81,9 @@
       flex-wrap: wrap;
       justify-content: space-evenly;
       width: 80%;
-      // .hidden {
-      //   display: none;
-      // }
+      @media @tablet {
+        width: 100%;
+      }
       .card {
         width: 350px;
         margin: 40px;
